--- a/cfn.yaml
+++ b/cfn.yaml
@@ -7,7 +7,9 @@ Parameters:
     Type: String
   ThingName:
     Type: String
+
 Resources:
+ #OpenSearch
   OpenSearchDomain:
     Type: AWS::OpenSearchService::Domain
     Properties:
@@ -45,6 +47,8 @@ Resources:
               IpAddress:
                 aws:SourceIp:
                   Ref: SourceIP
+
+  #iot core rule
   IoTRuleRole:
     Type: "AWS::IAM::Role"
     Properties:
